# med2glb

./: .gitignore  ANALYSIS_REPORT.txt  ANALYSIS_SUMMARY.txt  CARTO_ANALYSIS.md  CLAUDE.md  README.md  README_ANALYSIS.md  pyproject.toml
.specify/memory/: constitution.md
specs/003-xatlas-timer/: spec.md
specs/003-xatlas-timer/checklists/: requirements.md
specs/004-wizard-first-ux/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-dicom-glb-converter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/main/: plan.md
specs/med2glb/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/dicom2glb/: __init__.py  __main__.py  cli.py
src/med2glb/: __init__.py  __main__.py  _console.py  _pipeline_carto.py  _pipeline_dicom.py  _pipeline_gallery.py  _utils.py  cli.py  cli_wizard.py
test_gltfpack/: test_red_after_gltfpack.glb  test_red_before_gltfpack.glb  test_vertex_colors_after_gltfpack.glb  test_vertex_colors_before_gltfpack.glb
tests/: conftest.py
tests/integration/: conftest.py  test_animated_cache.py  test_carto_pipeline.py  test_cli.py  test_dicom_real.py  test_pipeline.py
tests/unit/: test_arrow_builder.py  test_carto_glb.py  test_carto_mapper.py  test_carto_reader.py  test_cli_wizard.py  test_color_morph_targets.py  test_compress.py  test_dicom_reader.py  test_gallery.py  test_glb_builder.py  test_lat_vectors.py  test_legend_builder.py  test_mesh_processing.py  test_methods.py  test_pipeline_dicom.py  test_vertex_color_bake.py  test_wavefront_colors.py
(+68 files in other folders)
